crates/carta/tests/snapshots/golden_writer__native__common__paragraph.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Str "a"
    , Space
    , Str "simple"
    , Space
    , Str "paragraph"
    , Space
    , Str "with"
    , Space
    , Str "words"
    ]
]
