crates/carta/tests/snapshots/golden_writer__native__common__raw-html-block.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Div
    ( "" , [ "x" ] , [] )
    [ Plain [ Str "raw" , Space , Str "block" ] ]
]
