crates/carta/tests/snapshots/golden_writer__native__common__raw-latex-block.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ RawBlock (Format "latex") "\\macro{value}" ]
