crates/carta/tests/snapshots/golden_writer__native__common__raw-latex-inline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Str "a"
    , Space
    , RawInline (Format "latex") "\\macro"
    , Space
    , Str "b"
    ]
]
