crates/carta/tests/snapshots/golden_writer__native__common__soft-break.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Str "first"
    , Space
    , Str "line"
    , SoftBreak
    , Str "second"
    , Space
    , Str "line"
    ]
]
