crates/carta/tests/snapshots/golden_writer__native__common__span-empty-attr.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Span
        ( ""
        , [ "" , "real" ]
        , [ ( "" , "drop" ) , ( "keep" , "v" ) ]
        )
        [ Str "x" ]
    ]
]
