crates/carta/tests/snapshots/golden_writer__native__common__span-semantic.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Span
        ( "theid"
        , [ "kbd" , "mid" , "mark" , "rest" ]
        , [ ( "k" , "v" ) ]
        )
        [ Str "x" ]
    , Space
    , Span ( "" , [ "dfn" ] , [] ) [ Str "term" ]
    ]
]
