crates/carta/tests/snapshots/golden_writer__native__common__span.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Str "a"
    , Space
    , Span
        ( "s" , [ "c" ] , [ ( "data-k" , "v" ) ] ) [ Str "styled" ]
    , Space
    , Str "word"
    ]
]
