crates/carta/tests/snapshots/golden_writer__native__common__subscript-fallback.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Str "water"
    , Space
    , Str "H"
    , Subscript [ Str "2" ]
    , Str "O"
    , Space
    , Str "and"
    , Space
    , Str "sub"
    , Subscript [ Str "ab" ]
    , Space
    , Str "here"
    ]
]
